# qwen3-llm-from-scratch

./: .gitignore  AUDIO_GENERATION_SUMMARY.md  FINAL_MULTIMODAL_SUMMARY.md  README.md  convert_checkpoint.py  push_model.py  qwen3_complete_model.py  qwen3_from_scratch.py  qwen3_small_config.py  serve_qwen3.py  train_qwen3.py  tts-snac-base.py
blog_posts/: 01_building_qwen3_from_scratch.md  02_lora_qlora_efficient_finetuning.md  03_vllm_style_fast_inference.md  04_openai_compatible_api_server.md  05_triton_gpu_programming.md  06_supercharging_llm_inference_triton.md  07_complete_llm_pipeline.md  08_technical_deep_dive.md  README.md
data_cache/: tokenized_data_200_50000.pkl
qwen-llm/: FAST_INFERENCE_README.md  FINETUNING_README.md  QUANTIZATION_README.md  __init__.py  benchmark_quantization.py  convert_checkpoint.py  demo_finetune.py  finetune_imdb.py  lora_finetune.py  qlora_finetune.py  quantization_tutorial.py  qwen3_complete_model.py  qwen3_core_components.py  serve_quantized.py  serve_qwen3.py  train_qwen3.py
qwen-llm/config/: __init__.py  qwen3_small_config.py
qwen-llm/fast_inference/: IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  OPENAI_API_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  README_OPENAI_API.md  UNIVERSAL_GUIDE.md  VLLM_COMPARISON.md  __init__.py  cli.py  cli_openai.py  pyproject.toml  requirements_openai.txt  setup.py  test_openai_api.py  test_openai_simple.py
qwen-llm/fast_inference/core/: __init__.py
qwen-llm/fast_inference/core/attention/: __init__.py  cached_attention.py  optimized_attention.py
qwen-llm/fast_inference/core/cache/: __init__.py  paged_cache.py  simple_cache.py
qwen-llm/fast_inference/core/engine/: __init__.py  advanced_engine.py  openai_api_server.py  openai_protocol.py  openai_serving_engine.py  simple_engine.py  universal_engine.py  universal_vllm_engine.py  vllm_style_engine.py
qwen-llm/fast_inference/examples/: __init__.py  openai_api_example.py  universal_example.py  universal_vllm_example.py  vllm_style_example.py
qwen-llm/fast_inference/examples/advanced/: __init__.py  production_server.py
qwen-llm/fast_inference/examples/basic/: __init__.py  performance_comparison.py  quick_start.py
qwen-llm/fast_inference/fast_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
qwen-llm/fast_inference/tests/: __init__.py  conftest.py
qwen-llm/fast_inference/tests/integration/: __init__.py  test_engine.py
qwen-llm/fast_inference/tests/unit/: __init__.py  test_cache.py  test_sampling.py
qwen-llm/fast_inference/utils/: __init__.py
qwen-llm/fast_inference/utils/benchmarking/: __init__.py  benchmarking.py
qwen-llm/fast_inference/utils/sampling/: __init__.py  sampling.py
qwen-llm/lora_qlora/: README.md  UNIVERSAL_GUIDE.md  __init__.py  requirements.txt  setup.py
qwen-llm/lora_qlora/core/: __init__.py
qwen-llm/lora_qlora/examples/: __init__.py
qwen-llm/lora_qlora/tests/: __init__.py
qwen-llm/original_files/: compare_inference.py  fast_inference.py  simple_fast_inference.py
qwen-llm/pretraining/: __init__.py
qwen-llm/triton_tutorials/: QUICK_START.md  README.md  TRITON_TUTORIALS_SUMMARY.md  __init__.py  cli.py  requirements.txt  setup.py
qwen-omni/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  requirements.txt  setup.py
qwen-omni/pretraining/: PRETRAINING_README.md  __init__.py
(+99 files in other folders)
